--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+@import './assets/styles/scss/utils/fonts.scss';
+
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Regular','Arial';
 }
 
 html,
@@ -18,6 +21,8 @@ body,
 
 .container {
   flex: 1 0 auto;
+  padding: 0 40px;
+  padding-top: 10px;
 }
 
 .footer, .header {
@@ -26,4 +31,6 @@ body,
 
 a {
   text-decoration: none;
+  transition: 0.5s all;
 }
+
