--- a/src/assets/styles/css/utils/fonts.css
+++ b/src/assets/styles/css/utils/fonts.css
@@ -16,5 +16,11 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "Super-Bold";
+  src: url("../../fonts/Quicksand/Quicksand-Bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 
 /*# sourceMappingURL=fonts.css.map */
