--- a/src/assets/styles/scss/utils/fonts.scss
+++ b/src/assets/styles/scss/utils/fonts.scss
@@ -18,3 +18,10 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Super-Bold';
+  src: url('../../fonts/Quicksand/Quicksand-Bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
