--- a/src/assets/styles/scss/utils/variables.scss
+++ b/src/assets/styles/scss/utils/variables.scss
@@ -1,8 +1,9 @@
-$appColor: hsl(236, 100%, 67%);
+$appColor: #0082C7;
 $grayColor: #413F42;
 $opacityLineColor: #cccccc59;
 $textColor: #413f42db;
+$backgroupAppColor: #F7F7F7;
 
-$blockShahow: -3px -3px 7px #f2f2f2, 3px 3px 7px #c6cace;
+$blockShahow: -3px -3px 7px #e4e3e3, 3px 3px 7px #a8aeb4;
 
 $appPadding: 40px;
