--- a/src/assets/styles/css/particles/header.css
+++ b/src/assets/styles/css/particles/header.css
@@ -27,11 +27,12 @@
 }
 .main-header .special-link {
   background-color: #0082C7;
-  padding: 5px 10px;
+  padding: 6px 10px;
   border-radius: 4px;
   font-family: "Bold";
   color: #fff;
   text-transform: uppercase;
+  font-size: 0.9em;
 }
 .main-header .special-link:hover {
   box-shadow: -3px -3px 7px #e4e3e3, 3px 3px 7px #a8aeb4;
