--- a/src/assets/styles/scss/particles/header.scss
+++ b/src/assets/styles/scss/particles/header.scss
@@ -37,11 +37,12 @@
 
   .special-link {
     background-color: $appColor;
-    padding: 5px 10px;
+    padding: 6px 10px;
     border-radius: 4px;
     font-family: 'Bold';
     color: #fff;
     text-transform: uppercase;
+    font-size: 0.9em;
 
     &:hover {
       box-shadow: $blockShahow;
