--- a/src/assets/styles/scss/utils/mixins.scss
+++ b/src/assets/styles/scss/utils/mixins.scss
@@ -3,3 +3,15 @@
 @mixin box-shadow {
   box-shadow: $blockShahow;
 }
+
+@mixin flex {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+@mixin flex-column {
+  @include flex;
+  flex-direction: column;
+}
