--- a/src/assets/styles/scss/particles/footer.scss
+++ b/src/assets/styles/scss/particles/footer.scss
@@ -1,8 +1,65 @@
-footer {
-  margin-top: 50px;
-  border: 1px solid #ccc;
+@import '../utils/variables.scss';
+@import '../utils/mixins.scss';
 
-  p {
-    color: blue;
+.main-footer {
+  margin-top: 50px;
+  border: 1px solid $opacityLineColor;
+  padding: 40px 100px;
+
+  @include flex;
+
+  .cover {
+    width: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .info {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+  
+      h3 {
+        font-family: 'Super-Bold';
+        font-size: 2em;
+        text-transform: uppercase;
+      }
+  
+      .description {
+        b {
+          font-family: 'Bold';
+        }
+      }
+  
+      ul {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+        li {
+          list-style-type: none;
+          a {
+            @include flex;
+            gap: 14px;
+            padding-right: 5px;
+            border-radius: 3px;
+
+            img {
+              height: auto;
+              max-width: 40px;
+            }
+  
+            span {
+              transition: 0.4s;
+
+              &:hover {
+                color: $appColor;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
