--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ body,
 
 .container {
   min-height: 100vh;
+  margin-top: 61px; /* Header height */
   flex: 1 0 auto;
   padding: 0 40px;
   padding-top: 20px;
