--- a/src/assets/styles/css/pages/home.css
+++ b/src/assets/styles/css/pages/home.css
@@ -1,5 +1,5 @@
 main .home-info {
-  min-height: 100vh;
+  min-height: calc(100vh - 75px);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -32,13 +32,18 @@ main .home-info .cover .general-info .links {
   gap: 20px;
 }
 main .home-info .cover .general-info .links a {
+  min-width: 235px;
+  min-height: 54px;
   border-radius: 8px;
-  padding: 15px 70px;
   color: #0082C7;
   border: 2px solid #0082c7bd;
   font-family: "Bold";
   transition: 0.5s;
-  display: block;
+  font-size: 1.1em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 main .home-info .cover .general-info .links a.active {
   background-color: #0082C7;
