--- a/src/assets/styles/scss/particles/search.scss
+++ b/src/assets/styles/scss/particles/search.scss
@@ -52,5 +52,10 @@
     background: none;
     font-size: 1em;
     font-family: 'Bold';
+    transition: 0.4s;
+
+    &:hover {
+      color: $appColor;
+    }
   }
 }
