--- a/src/assets/styles/css/pages/home.css
+++ b/src/assets/styles/css/pages/home.css
@@ -24,6 +24,11 @@ main .home-info .cover .general-info .title {
   font-family: "Super-Bold";
   text-transform: uppercase;
 }
+@media (min-width: 1000px) {
+  main .home-info .cover .general-info .title {
+    font-size: 3.2em;
+  }
+}
 main .home-info .cover .general-info .about {
   font-size: 1.2em;
 }
