--- a/src/assets/styles/css/pages/team.css
+++ b/src/assets/styles/css/pages/team.css
@@ -2,7 +2,7 @@
   margin-top: 30px;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 40px;
 }
 .team .member {
   display: flex;
@@ -21,7 +21,7 @@
   gap: 8px;
 }
 .team .member .profile-info .name {
-  font-size: 1.5em;
+  font-size: 1.7em;
   font-family: "Bold";
 }
 .team .member .profile-info .job-title {
@@ -30,8 +30,9 @@
   gap: 13px;
 }
 .team .member .profile-info .job-title span {
-  border: 1px solid #413f4269;
-  border-radius: 4px;
+  border: 1px solid #0082C7;
+  color: #0082C7;
+  border-radius: 2px;
   font-size: 0.9em;
   padding: 2px 6px;
 }
