--- a/src/assets/styles/scss/pages/team.scss
+++ b/src/assets/styles/scss/pages/team.scss
@@ -5,7 +5,7 @@
 
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 40px;
   
   .member {
     display: flex;
@@ -30,7 +30,7 @@
       gap: 8px;
 
       .name {
-        font-size: 1.5em;
+        font-size: 1.7em;
         font-family: 'Bold';
       }
 
@@ -40,8 +40,9 @@
         gap: 13px;
 
         span {
-          border: 1px solid #413f4269;
-          border-radius: 4px;
+          border: 1px solid $appColor;
+          color: $appColor;
+          border-radius: 2px;
           font-size: 0.9em;
           padding: 2px 6px;
         }
