fix (publications): added a case with invalid link

--- a/src/assets/styles/css/pages/publications/components/publication.css
+++ b/src/assets/styles/css/pages/publications/components/publication.css
@@ -15,6 +15,10 @@
   font-size: 1.2em;
   color: #0082C7;
 }
+.publication .description.non-active {
+  color: #413f42db;
+  cursor: default;
+}
 .publication .description .year {
   margin-left: 5px;
 }
