feat & fix (collabs & app): added new collaborations page & change resize app styles

--- a/src/assets/styles/css/pages/publications/components/publication.css
+++ b/src/assets/styles/css/pages/publications/components/publication.css
@@ -19,6 +19,11 @@
   color: #413f42db;
   cursor: default;
 }
+.publication .description .num {
+  color: inherit;
+  margin-right: 3px;
+  font-family: "Bold";
+}
 .publication .description .year {
   margin-left: 5px;
 }
