--- a/src/assets/styles/scss/pages/publications/components/publication.scss
+++ b/src/assets/styles/scss/pages/publications/components/publication.scss
@@ -24,6 +24,12 @@
       cursor: default;
     }
 
+    .num {
+      color: inherit;
+      margin-right: 3px;
+      font-family: 'Bold';
+    }
+
     .year {
       margin-left: 5px;
     }
