--- a/src/assets/styles/css/particles/header.css
+++ b/src/assets/styles/css/particles/header.css
@@ -4,31 +4,43 @@
   border-bottom: 1px solid #cccccc59;
   padding: 15px 40px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   position: fixed;
 }
-.main-header .logo img {
+.main-header .cover {
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media (max-width: 1200px) {
+  .main-header .cover {
+    min-width: auto;
+  }
+}
+.main-header .cover .logo img {
   height: auto;
   max-width: 105px;
 }
-.main-header ul {
+.main-header .cover ul {
   display: flex;
   gap: 15px;
 }
-.main-header ul li {
+.main-header .cover ul li {
   list-style-type: none;
 }
-.main-header ul li a {
+.main-header .cover ul li a {
   color: #413f42db;
   user-select: none;
   text-transform: capitalize;
   font-family: "Bold";
 }
-.main-header ul li a:hover {
+.main-header .cover ul li a:hover {
   color: #0082C7;
 }
-.main-header .special-link {
+.main-header .cover .special-link {
   background-color: #0082C7;
   padding: 6px 10px;
   border-radius: 4px;
@@ -37,7 +49,7 @@
   text-transform: uppercase;
   font-size: 0.9em;
 }
-.main-header .special-link:hover {
+.main-header .cover .special-link:hover {
   box-shadow: -3px -3px 7px #e4e3e3, 3px 3px 7px #a8aeb4;
 }
 
