refactor (blogs): joined with the server and created preloaders

--- a/src/assets/styles/css/pages/blogs/blogs.css
+++ b/src/assets/styles/css/pages/blogs/blogs.css
@@ -5,6 +5,9 @@
   flex-wrap: wrap;
   gap: 50px;
 }
+.blogs.preloader-blogs .preview-block {
+  margin: 0;
+}
 .blogs .blog {
   width: 400px;
   padding: 20px;
