--- a/src/assets/styles/css/pages/blogs/blog.css
+++ b/src/assets/styles/css/pages/blogs/blog.css
@@ -1,3 +1,18 @@
-
+.blog-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.blog-page .title {
+  max-width: 800px;
+  font-size: 1.4em;
+  text-align: center;
+  font-family: "Bold";
+  color: #0082C7;
+  margin-bottom: 20px;
+}
+.blog-page .content {
+  width: 100%;
+}
 
 /*# sourceMappingURL=blog.css.map */
