--- a/src/assets/styles/scss/pages/blogs/blogs.scss
+++ b/src/assets/styles/scss/pages/blogs/blogs.scss
@@ -7,5 +7,11 @@
   flex-wrap: wrap;
   gap: 50px;
 
+  &.preloader-blogs {
+    .preview-block {
+      margin: 0;
+    }
+  }
+
   @import './components/blog-item.scss';
 }
