--- a/src/assets/styles/scss/pages/blogs/blog.scss
+++ b/src/assets/styles/scss/pages/blogs/blog.scss
@@ -7,11 +7,11 @@
 
   .title {
     max-width: 800px;
+    margin: 20px 0;
     font-size: 1.4em;
     text-align: center;
     font-family: 'Bold';
     color: $appColor;
-    margin-bottom: 20px;
   }
 
   .content {
