--- a/src/assets/styles/scss/particles/header.scss
+++ b/src/assets/styles/scss/particles/header.scss
@@ -9,7 +9,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  
   position: fixed;
+  z-index: 1;
 
   .cover {
     width: 100%;
