feat (app): added server connection with publications, collaborations, team & funcional to contact-us form with feedback

--- a/src/assets/styles/scss/pages/collaborations.scss
+++ b/src/assets/styles/scss/pages/collaborations.scss
@@ -90,6 +90,12 @@
   }
 }
 
+.preloaders {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .information-blocks {
   @include flex-column;
   gap: 10px;
