--- a/src/assets/styles/css/pages/collaborations.css
+++ b/src/assets/styles/css/pages/collaborations.css
@@ -77,6 +77,12 @@
   padding: 2px 8px;
 }
 
+.preloaders {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .information-blocks {
   display: flex;
   flex-direction: row;
