--- a/src/assets/styles/scss/pages/team.scss
+++ b/src/assets/styles/scss/pages/team.scss
@@ -6,6 +6,10 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+
+  &.preloader-mode {
+    gap: 0;
+  }
   
   .member {
     display: flex;
