--- a/src/assets/styles/css/particles/title.css
+++ b/src/assets/styles/css/particles/title.css
@@ -7,4 +7,10 @@
   font-size: 2em;
 }
 
+@media (max-width: 730px) {
+  .page-title {
+    font-size: 1.5em;
+  }
+}
+
 /*# sourceMappingURL=title.css.map */
